MC-49 Cleaning up some warnings. Adding TODOs for future investigation.